--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -10,3 +10,11 @@ h1 { color:
     background-color: black;
     color: white;
 }
+
+//! Colores
+
+$color-primario:rgb(54, 54, 147);
+$color-secundario:rgb(126, 1, 244);
+$color-terciario: rgb(100, 214, 237);
+$color-cuarto: rgb(28, 28, 98);
+$color-quinto:rgb(109, 109, 142);
