--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -4,7 +4,7 @@
     text-decoration: none;
 }
 .contenedor{
-    background-color: rgb(109, 109, 142);
+    background-color: $color-quinto;
     max-width: 1600px;
     margin: 0 auto;
 }
